2000-02-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: add -O option to help.
	* Http.cc: declare strptime if needed.

2000-02-01  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.h: add GetETAStrSFromTime.
	* FileCopy.cc, FileCopy.h: split off Speedometer;
	  add GetETAStrSFromTime; pass reource name to Speedometer.
	* pgetJob.cc: call cp->GetETAStrSFromTime.
	* commands.cc: set old path before cd, so that after `open url'
	  `cd -' works; add --use-cache to mirror help.
	* Speedometer.cc, Speedometer.h: new files; accept resource name
	  instead of period.
	* ProcWait.cc: don't change state to ERROR at all (because process
	  can still run after waitpid fails)
	* FtpListInfo.cc: more verbose status.
	* FtpSplitList.cc, FtpSplitList.h: measure rate.
	* MirrorJob.cc: show only li->Status(); add use_cache member;

2000-01-31  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.h, FileAccess.cc: add NO_PASSWORD option for GetFileURL.
	* history.cc: use NO_PASSWORD; encode paths in cwd_history.
	* NetAccess.cc, NetAccess.h: (ReconnectInterval, DelayingMessage) new
	  methods.
	* ftpclass.cc, Http.cc: use DelayingMessage.
	* CmdExec.cc: show job number for queue's current job.
	* complete.cc: improve completion for queue command.
	* commands.cc: improve help for queue.

2000-01-30  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc: flush buffer in case of error.
	* ProcWait.cc: don't spin on error or done.
	* SMTask.cc: add debug code.
	* ftpclass.cc: add assert; remove obsolete code.
	* ProcWait.cc: handle waitpid errors better.

2000-01-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: check for "timed out" in reply; check if data were
	  sent or received before 5xx reply; don't spin on errors (not a bug).
	* PollVec.cc, PollVec.h: simplify.
	* CharReader.cc, FileCopy.cc, FileFeeder.cc, LocalAccess.cc,
	  ProcWait.cc, Resolver.cc, StatusLine.cc, SysCmdJob.cc, buffer.cc,
	  lftp.cc: don't use block directly.